--- a/views/login.html
+++ b/views/login.html
@@ -38,7 +38,7 @@
                 </ul>
             </div>
             <div>
-                <li class="botonHome"><a href="http://localhost:3030">Home</a><i class="fas fa-home"></i></li>
+                <li class="botonHome"><a href="http://localhost:3031">Home</a><i class="fas fa-home"></i></li>
             </div>
             <div class="login">
                 <ul>
@@ -56,12 +56,12 @@
         </div>
     </header>
     <div class="register">
-        <form action="index.html" method="POST">
+        <form action="home.html" method="POST">
             <label for="usuario">Nombre de usuario:</label> <br>
             <input type="text" name="usuario" id="usuario"> <br>
             <label for="password">Contraseña:</label><br>
             <input type="password" name="password" id="password"><br>
-                        <div class="botones">
+            <div class="botones">
             <button class="enviar" type="submit">ENVIAR</button>
             </div>
         </form>
